[package]
name = "silang-math"
version = "0.1.0"
authors = ["Kaoru Chisen <cordx56@cordx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "math"
crate-type = ["cdylib"]

[dependencies]
silang = { git = "https://github.com/cordx56/silang", branch = "master" }
